@@ -1,4 +1,12 @@
 # TrashEditer
  
-commands:
-input:
+compile command:
+```batch
+javac -cp ./bin -d ./bin --module-path %PATH_TO_FX% --add-modules javafx.controls src/*.java src/ui/*.java src/interpreter/*.java
+```
+
+run command:
+```batch
+java -cp ./bin --module-path %PATH_TO_FX% --add-modules javafx.controls Main
+```
+
